04-05 images floated to the left, to allow texts wrap around them. Also, overflow: hidden; was used to clear fix the following sections. Also paddings and margins applied to make the page more organized.

--- a/css-portfolio/css/styles.css
+++ b/css-portfolio/css/styles.css
@@ -69,9 +69,6 @@ header {
 .projects a {
   color: #2F3061;
 }
-.projects a:hover {
-  background: rgba(47, 48, 97, 80%)
-}
 .projects .btn {
   color: #F7FFF7;
   background: #2F3061;
@@ -79,6 +76,21 @@ header {
   padding: 8px;
   border-radius: 4px;
   display: inline-block;
+}
+.projects a:hover {
+  background: rgba(47, 48, 97, 80%)
+}
+.project-item {
+  overflow: hidden;
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
+}
+.project-item img {
+  float: left;
+  margin-right: 20px;
+}
+.project-item h3 {
+  margin-top: 0;
 }
 /* Work Experience
 -----------------*/
